--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -8,6 +8,9 @@ PbootCMS V1.3.7 build 2019-03-12
 1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
 2、修复搜索时表单传递字段控制被过滤掉的问题；
 3、新增多个搜索通过传递searchtpl字段自定义不同搜索结果页模板；
+4、修复分享非默认语言链接后无法直接访问问题；
+5、新增跨语言调用内容及列表的支持；
+6、新增留言使用lg=*调取指定语言留言记录功能；
 
 PbootCMS V1.3.6 build 2019-01-12
 1、框架问题修复与优化;
