--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -44,7 +44,7 @@ PbootCMS V1.3.3 build 2018-11-29
 9、验证码加入英文字母增强复杂度;
 
 PbootCMS V1.3.2 build 2018-11-22
-1、修复用户名验证规则不统一导致修改特殊字符后无法登陆问题;
+1、修复用户名验证规则不统一导致修改特殊字符后无法登录问题;
 2、修复js无法获取到点赞及反对cookie的问题;
 3、修复content标签无法使用scode调取单页问题;
 4、新增start=*设置数据列表起始数据;
@@ -57,7 +57,7 @@ PbootCMS V1.3.2 build 2018-11-22
 PbootCMS V1.3.1 build 2018-11-14
 1、优化在线升级功能;
 2、修复表单Ajax提交返回状态码不正确问题;
-3、优化会话层级目录创建，避免会话目录缺失导致登陆失败的情况;
+3、优化会话层级目录创建，避免会话目录缺失导致登录失败的情况;
 
 PbootCMS V1.3.0 build 2018-11-12
 1、优化会话创建机制,避免会话文件过多问题;
@@ -93,7 +93,7 @@ PbootCMS V1.2.2 build 2018-10-12
 8、修复列表筛选与指定分类列表冲突问题;
 9、修复多次调用内容标签导致重复计算访问量问题;
 10、大幅提高Sqlite数据库数据写入速度;
-11、优化后台登陆错误处理机制;
+11、优化后台登录错误处理机制;
 12、优化数据列表排序方式;
 13、新增模板嵌套引用的支持;
 14、新增在线更新涉及数据库时自动备份数据库;
@@ -137,7 +137,7 @@ PbootCMS V1.1.9 build 2018-08-17
 
 PbootCMS V1.1.8 build 2018-08-07
 1、修复提交表单多选字段接收数据问题;
-2、修复登陆过程中二次登陆在页面不刷新时验证失败问题;
+2、修复登录过程中二次登录在页面不刷新时验证失败问题;
 3、新增搜索结果fuzzy参数来控制是否模糊匹配;
 4、新增父分类、顶级分类名称及链接独立标签，具体见手册;
 5、新增内容多图拖动排序功能;
@@ -174,7 +174,7 @@ PbootCMS V1.1.6 build 2018-07-21
 16、新增幻灯片、友情链接、扩展字段排序的支持;
 17、新增sitemap生成，读取地址/index.php/sitemap;
 18、新增URL路径支持中文;
-19、新增中文用户名登陆的支持;
+19、新增中文用户名登录的支持;
 20、新增API正文内容返回图片路径自动添加网址路径;
 21、新增邮件配置中发送测试邮件功能;
 22、新增API调用自定义表单数据接口;
@@ -210,7 +210,7 @@ PbootCMS V1.1.4 build 2018-06-25
 3、修复静态缓存失效问题并提高缓存效果;
 4、新增多条件筛选时多选类型支持;
 5、新增全站多条件筛选的支持;
-6、新增登陆时数据库目录写入权限判断提示;
+6、新增登录时数据库目录写入权限判断提示;
 7、新增后台开启高速静态缓存功能;
 8、新增后台填写授权码功能;
 9、新增指定列表scode使用逗号调用多个分类功能;
@@ -319,13 +319,11 @@ PbootCMS V1.0.4 build 2018-04-19
 4、新增模型类菜单桌面同步显示;
 5、新增当前栏目位置标签;
 
-
 PbootCMS V1.0.3 build 2018-04-16
 1、修复多图输出只输出一张问题;
 2、修复PHP7.1中合并多维数组警告;
 3、修复登录地址末尾带有斜杠时错误;
 4、新增配置文件自动去除Bom,避免空白;
-
 
 PbootCMS V1.0.2 build 2018-04-14
 1、新增自动去除模板的Bom信息，避免空白;
@@ -333,17 +331,15 @@ PbootCMS V1.0.2 build 2018-04-14
 3、修复编辑器无法插入动态地图问题;
 4、修复文章排序无法按预期排列问题;
 
-
 PbootCMS V1.0.1 build 2018-04-13
 1、修复数据库导出未正常解码问题;
 2、修复系统栏目出现多个新闻内容问题;
 3、新增默认及内置区域不允许删除;
-4、新增删除区域后强制重新登陆;
+4、新增删除区域后强制重新登录;
 5、修复前端多语言无法正常切换问题;
 6、修复新增语言无法匹配默认模板问题;
 7、Mysql脚本默认内容解码有问题，大家重新导入sql;
 8、修复友情链接图片无法自适应多级目录;
-
 
 PbootCMS V1.0.0 build 2018-04-12
 1、正式发布第一个版本。
