--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -12,6 +12,8 @@ PbootCMS V1.3.7 build 2019-03-12
 5、新增跨语言调用内容及列表的支持；
 6、新增留言使用lg=*调取指定语言留言记录功能；
 7、新增order=random调取随机排序内容列表；
+8、修复上传图片字段使用网络图片时地址错误问题；
+9、修复栏目seo标题使用自动标题时不显示问题；
 
 PbootCMS V1.3.6 build 2019-01-12
 1、框架问题修复与优化;
