--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -8,8 +8,9 @@ PbootCMS V1.3.8 build 2019-04-12
 1、新增同时支持fsockopen及stream_socket_client发送邮件；
 2、优化邮件发送失败错误提示信息；
 3、新增手机版绑定域名后自动跳转到对应域名地址上；
-4、修改会话文件默认使用系统路径；
+4、修改会话文件默认为使用系统环境缓存路径；
 5、修复mysqli配置文件读取端口不一致问题；
+6、修复tags为空时仍然会输出代码字符问题；
 
 PbootCMS V1.3.7 build 2019-03-12
 1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
