--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -11,6 +11,9 @@ PbootCMS V1.3.8 build 2019-04-12
 4、修改会话文件默认为使用系统环境缓存路径；
 5、修复mysqli配置文件读取端口不一致问题；
 6、修复tags为空时仍然会输出代码字符问题；
+7、修复开启缓存功能后异样地址会导致文件产生问题；
+8、修复编辑器在PHP7下多图上传名字重复问题；
+9、修复编辑器多图上传位置错乱问题；
 
 PbootCMS V1.3.7 build 2019-03-12
 1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
