--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,16 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.3.9 build 2019-05-15
+1、优化相关目录权限不足报错机制；
+2、修复PHP56有时后台更新无法使用问题；
+3、优化后台在线升级功能；
+4、新增中文路径部署检测；
+5、优化升级系统框架模板引擎；
+6、新增自定义路由正则匹配的支持；
+7、新增后台配置数字分页条数量；
+8、其他问题修复与优化；
+
 PbootCMS V1.3.8 build 2019-04-12
 1、新增同时支持fsockopen及stream_socket_client发送邮件；
 2、优化邮件发送失败错误提示信息；
