--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,17 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.1 build 2019-07-12
+1、扩大自定义字段默认长度；
+2、升级layui为最新版本；
+3、修复后台IE浏览器部分兼容性问题；
+4、修复新增区域无法绑定域名问题；
+5、修复图片无法拖动排序问题；
+6、优化合并邮箱配置功能到系统配置；
+7、增加会话文件路径后台切换功能；
+8、新增单页模型也在导航菜单分组显示；
+9、新增内容图片水印功能；
+
 PbootCMS V1.4.0 build 2019-06-07
 1、修复部分浏览器多图无法删除的问题；
 2、新增万能授权码填写后自动后台隐藏功能；
