--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -10,10 +10,16 @@ PbootCMS V1.4.1 build 2019-07-12
 3、修复后台IE浏览器部分兼容性问题；
 4、修复新增区域无法绑定域名问题；
 5、修复图片无法拖动排序问题；
-6、优化合并邮箱配置功能到系统配置；
-7、增加会话文件路径后台切换功能；
-8、新增单页模型也在导航菜单分组显示；
-9、新增内容图片水印功能；
+6、修复单独修改用户角色不成功问题；
+7、修复微信分享参数导致安全拦截提示问题；
+8、修复登陆失败时验证码不刷新问题；
+9、修复编辑器未能按设置大小缩放图片问题；
+10、优化合并邮箱配置功能到系统配置；
+11、增加会话文件路径后台切换功能；
+12、新增单页模型也在左侧导航中显示；
+13、新增文章图片水印功能；
+14、新增文章内容内链功能；
+15、其他问题修复与优化；
 
 PbootCMS V1.4.0 build 2019-06-07
 1、修复部分浏览器多图无法删除的问题；
