--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.2 build 2019-08-12
+1、修复内容tags为空时也有代码输出问题；
+
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
 2、升级layui为最新版本；
