--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -7,6 +7,7 @@
 PbootCMS V1.4.2 build 2019-08-12
 1、修复内容tags为空时也有代码输出问题；
 2、新增文章内链替换次数系统配置参数；
+3、新增修改栏目时可选同步修改子栏目模板的功能；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
