--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -9,6 +9,7 @@ PbootCMS V1.4.2 build 2019-08-12
 2、新增文章内链替换次数系统配置参数；
 3、新增修改栏目时可选同步修改子栏目模板的功能；
 4、新增批量添加栏目功能；
+5、新增自定义表单添加到左侧导航菜单功能；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
