--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -10,6 +10,8 @@ PbootCMS V1.4.2 build 2019-08-12
 3、新增修改栏目时可选同步修改子栏目模板的功能；
 4、新增批量添加栏目功能；
 5、新增自定义表单添加到左侧导航菜单功能；
+6、修复角色修改时区域数量显示不全问题；
+7、修复IE浏览器翻页兼容性问题；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
