--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -12,6 +12,7 @@ PbootCMS V1.4.2 build 2019-08-12
 5、新增自定义表单添加到左侧导航菜单功能；
 6、修复角色修改时区域数量显示不全问题；
 7、修复IE浏览器翻页兼容性问题；
+8、优化调整内链替换为长关键字优先；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
