--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -14,6 +14,8 @@ PbootCMS V1.4.2 build 2019-08-12
 7、修复IE浏览器翻页兼容性问题；
 8、优化调整内链替换为长关键字优先；
 9、新增连续多次登陆失败后锁定IP功能；
+10、新增自动记住上次添加内容栏目功能；
+11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
