--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,7 +4,7 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V1.4.2 build 2019-08-12
+PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
 2、新增文章内链替换次数系统配置参数；
 3、新增修改栏目时可选同步修改子栏目模板的功能；
@@ -16,6 +16,7 @@ PbootCMS V1.4.2 build 2019-08-12
 9、新增连续多次登陆失败后锁定IP功能；
 10、新增自动记住上次添加内容栏目功能；
 11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
+12、其他问题修复与优化；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
