--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -16,7 +16,8 @@ PbootCMS V1.4.2 build 2019-07-22
 9、新增连续多次登陆失败后锁定IP功能；
 10、新增自动记住上次添加内容栏目功能；
 11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
-12、其他问题修复与优化；
+12、新增表单提交验证码独立开关并优化邮箱提醒标题；
+13、其他问题修复与优化；
 
 PbootCMS V1.4.1 build 2019-07-12
 1、扩大自定义字段默认长度；
