--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,11 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.2 build 2019-08-**
+1、修复调用指定内容单页链接指向错误问题；
+2、优化调整模板引擎链接生成过程；
+
+
 PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
 2、新增文章内链替换次数系统配置参数；
