--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,10 +4,12 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V1.4.2 build 2019-08-**
-1、修复调用指定内容单页链接指向错误问题；
-2、优化调整模板引擎链接生成过程；
-
+PbootCMS V2.0.0 build 2019-08-12
+1、全新多种URL地址模式上线，模型、栏目、内容自由后台设置；
+2、新增模型下面有栏目时不允许直接删除；
+3、调整跨语言区域调用内容不再自动切换区域;
+4、新增上下篇preico标签调用缩略图；
+5、其他大量系统框架优化及调整;
 
 PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
@@ -18,7 +20,7 @@ PbootCMS V1.4.2 build 2019-07-22
 6、修复角色修改时区域数量显示不全问题；
 7、修复IE浏览器翻页兼容性问题；
 8、优化调整内链替换为长关键字优先；
-9、新增连续多次登陆失败后锁定IP功能；
+9、新增连续多次登录失败后锁定IP功能；
 10、新增自动记住上次添加内容栏目功能；
 11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
 12、新增表单提交验证码独立开关并优化邮箱提醒标题；
@@ -32,7 +34,7 @@ PbootCMS V1.4.1 build 2019-07-12
 5、修复图片无法拖动排序问题；
 6、修复单独修改用户角色不成功问题；
 7、修复微信分享参数导致安全拦截提示问题；
-8、修复登陆失败时验证码不刷新问题；
+8、修复登录失败时验证码不刷新问题；
 9、修复编辑器未能按设置大小缩放图片问题；
 10、优化合并邮箱配置功能到系统配置；
 11、增加会话文件路径后台切换功能；
