--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -6,10 +6,13 @@
 
 PbootCMS V2.0.0 build 2019-08-12
 1、全新多种URL地址模式上线，模型、栏目、内容自由后台设置；
-2、新增模型下面有栏目时不允许直接删除；
-3、调整跨语言区域调用内容不再自动切换区域;
-4、新增上下篇preico标签调用缩略图；
-5、其他大量系统框架优化及调整;
+2、后台不再依赖pathinfo提高环境兼容性；
+3、新增模型下面有栏目时不允许直接删除；
+4、调整跨语言区域调用内容不再自动切换区域;
+5、新增上下篇preico标签调用缩略图；
+6、优化在线更新文件过多时下载问题；
+7、优化sitamap生成格式；
+8、其他大量系统框架优化及调整;
 
 PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
