--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,11 +4,12 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V1.4.3 build 2019-08-09
+PbootCMS V1.4.3 build 2019-08-10
 1、修复调用指定内容单页链接指向错误问题；
 2、优化调整模板引擎链接生成过程；
 3、优化在线更新功能；
 4、新增升级到2.X分支版本的通道；
+5、其他问题修复与优化；
 
 PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
