--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -14,6 +14,13 @@ PbootCMS V2.0.0 build 2019-08-12
 7、优化sitamap生成格式；
 8、其他大量系统框架优化及调整;
 
+PbootCMS V1.4.3 build 2019-08-10
+1、修复调用指定内容单页链接指向错误问题；
+2、优化调整模板引擎链接生成过程；
+3、优化在线更新功能；
+4、新增升级到2.X分支版本的通道；
+5、其他问题修复与优化；
+
 PbootCMS V1.4.2 build 2019-07-22
 1、修复内容tags为空时也有代码输出问题；
 2、新增文章内链替换次数系统配置参数；
