--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -13,6 +13,7 @@ PbootCMS V2.0.0 build 2019-08-12
 6、优化在线更新文件过多时下载问题；
 7、优化sitamap生成格式；
 8、其他大量系统框架优化及调整;
+9、修复个别空间商的兼容性问题；
 
 PbootCMS V1.4.3 build 2019-08-10
 1、修复调用指定内容单页链接指向错误问题；
