--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -5,9 +5,11 @@
 ##########################################
 
 PbootCMS V2.0.2 build 2019-09-15
-1、伪静态时不允许再访问普通模式地址；
-2、新增xx:ispics判断是否有多图;
-3、其他问题修复与优化；
+1、伪静态时不再允许访问普通模式地址；
+2、新增xx:ispics判断是否有多图；
+3、新增页面内容关键词过滤功能；
+4、升级layui到最新版本；
+5、其他问题修复与优化。
 
 PbootCMS V2.0.1 build 2019-08-15
 1、优化编辑器工具栏浮动功能；
