--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -8,6 +8,7 @@ PbootCMS V2.0.3 build 2019-10-25
 1、修复一处PHP7环境下的安全漏洞；
 2、新增关闭留言、表单功能的开关；
 3、新增缩略图未上传时自动获取文章图片；
+4、其他问题修复与优化。
 
 PbootCMS V2.0.2 build 2019-09-15
 1、伪静态时不再允许访问普通模式地址；
