--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.4 build 2019-11-09
+1、修复一处PHP7环境下的安全漏洞；
+
 PbootCMS V1.4.3 build 2019-08-10
 1、修复调用指定内容单页链接指向错误问题；
 2、优化调整模板引擎链接生成过程；
