--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -8,10 +8,11 @@ PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
 2、修复一处安全漏洞，并全局加强系统安全过滤；
 3、修复面包屑参数中不能使用html的问题；
-4、新增程序全自动修改数据库名；
-5、新增operate参数对标签进行加减乘除等运算，如：[list:i operate=+100]；
-6、新增站点关闭功能；
-7、新增站点访问IP黑白名单功能；
+4、修复API接口中post方式page无效问题；
+5、新增程序全自动修改数据库名；
+6、新增operate参数对标签进行加减乘除等运算，如：[list:i operate=+100]；
+7、新增站点关闭功能；
+8、新增站点访问IP黑白名单功能；
 
 PbootCMS V2.0.3 build 2019-10-25
 1、修复一处PHP7环境下的安全漏洞；
