--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,10 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.5 build 2020-01-27
+1、优化前台404.html，并支持内容内{info}自适应提示文字；
+2、优化列表排序方式；
+
 PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
 2、修复一处安全漏洞，并全局加强系统安全过滤；
