--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -6,7 +6,8 @@
 
 PbootCMS V2.0.5 build 2020-01-27
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
-2、优化列表排序方式；
+2、优化内容列表排序方式,并修复api使用随机排序无效问题；
+3、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
 
 PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
