--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,10 +4,11 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V2.0.5 build 2020-01-27
+PbootCMS V2.0.5 build 2020-01-28
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
 2、优化内容列表排序方式,并修复api使用随机排序无效问题；
 3、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
+4、修复后台入口文件修改名字后在线升级无法自适应问题；
 
 PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
