--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -7,9 +7,11 @@
 PbootCMS V2.0.5 build 2020-01-30
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
 2、优化内容列表排序方式,并修复api使用随机排序无效问题；
-3、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
-4、修复后台入口文件修改名字后在线升级无法自适应问题；
-5、新增系统自适应入口文件路径的能力；
+3、修复后台入口文件修改名字后在线升级无法自适应问题；
+4、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
+5、新增系统自适应入口文件子目录的能力；
+6、新增留言及表单数据清空功能(管理员)；
+7、新增留言及表单数据导出功能；
 
 PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
