--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.6 build 2020-02-01
+1、修复搜索结果关键字标红无法正常匹配大小写问题；
+
 PbootCMS V2.0.5 build 2020-01-31
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
 2、优化内容列表排序方式,并修复api使用随机排序无效问题；
