--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.5 build 2020-02-01
+1、修复一处安全漏洞；
+
 PbootCMS V1.4.4 build 2019-11-09
 1、修复一处PHP7环境下的安全漏洞；
 
