--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,9 +4,12 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V2.0.6 build 2020-02-24
+PbootCMS V2.0.6 build 2020-03-08
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
 2、新增后台“安全配置”中配置模板文件子目录功能；
+3、修复operate参数无法使用小数问题；
+4、新增tags列表支持指定参数target=tag跳转到tag.html模板，参考默认模板；
+5、优化调整前台文件结构；
 
 PbootCMS V2.0.5 build 2020-01-31
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
