--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,7 +4,7 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V2.0.6 build 2020-03-08
+PbootCMS V2.0.6 build 2020-03-18
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
 2、新增后台“安全配置”中配置模板文件子目录功能；
 3、修复operate参数无法使用小数问题；
@@ -13,6 +13,7 @@ PbootCMS V2.0.6 build 2020-03-08
 6、优化调整前台代码结构；
 7、新增后台内容列表每页显示数量选择；
 8、修复tags重复显示问题；
+9、新增config/route.php文件自定义二开路由支持；
 
 PbootCMS V2.0.5 build 2020-01-31
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
