--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.7 build 2020-03-20
+1、修复后台被登录成功后系统更新处可能造成的安全漏洞；
+
 PbootCMS V2.0.6 build 2020-03-18
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
 2、新增后台“安全配置”中配置模板文件子目录功能；
