--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,8 +4,10 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V2.0.7 build 2020-03-20
+PbootCMS V2.0.7 build 2020-03-27
 1、修复后台被登录成功后系统更新处可能造成的安全漏洞；
+2、修复dropblank不支持全角空格过滤问题;
+3、新增万能码用户后台SVIP尊贵标识；
 
 PbootCMS V2.0.6 build 2020-03-18
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
