--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,10 +4,11 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
-PbootCMS V2.0.7 build 2020-03-27
+PbootCMS V2.0.7 build 2020-04-06
 1、修复后台被登录成功后系统更新处可能造成的安全漏洞；
 2、修复dropblank不支持全角空格过滤问题;
 3、新增万能码用户后台SVIP尊贵标识；
+4、修复模板子目录在目标文件夹存在时失败问题；
 
 PbootCMS V2.0.6 build 2020-03-18
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
