--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -1,7 +1,6 @@
 ﻿##########################################
 官方网站：https://www.pbootcms.com
 标签手册：https://www.pbootcms.com/docs.html
-版权所有：湖南翱云网络科技有限公司
 ##########################################
 
 PbootCMS V2.0.7 build 2020-04-06
@@ -9,6 +8,8 @@ PbootCMS V2.0.7 build 2020-04-06
 2、修复dropblank不支持全角空格过滤问题;
 3、新增万能码用户后台SVIP尊贵标识；
 4、修复模板子目录在目标文件夹存在时失败问题；
+5、修复后台内容编辑页面切换语言导致无限循环问题；
+6、新增后台切换多语言时同步切换前台语言；
 
 PbootCMS V2.0.6 build 2020-03-18
 1、修复搜索结果关键字标红无法正常匹配大小写问题；
