--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -5,6 +5,7 @@
 
 PbootCMS V2.0.8 build 2020-04-26
 1、修复兼容模式分享链接导致打不开页面问题；
+2、修复几处可能影响系统安全的漏洞；
 
 PbootCMS V2.0.7 build 2020-04-06
 1、修复后台被登录成功后系统更新处可能造成的安全漏洞；
