--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,9 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V2.0.9 build 2020-05-03
+1、新增多语言分享链接自动切换功能，并新增后台开关;
+
 PbootCMS V2.0.8 build 2020-04-26
 1、修复兼容模式分享链接导致打不开页面问题；
 2、修复几处可能影响系统安全的漏洞；
