--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,8 +3,9 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
-PbootCMS V2.0.9 build 2020-05-03
+PbootCMS V2.0.9 build 2020-05-04
 1、新增多语言分享链接自动切换功能，并新增后台开关;
+2、系统安全过滤完善与加固；
 
 PbootCMS V2.0.8 build 2020-04-26
 1、修复兼容模式分享链接导致打不开页面问题；
