--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,12 +3,13 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
-PbootCMS V2.0.9 build 2020-05-05
+PbootCMS V2.0.9 build 2020-06-18
 1、新增多语言分享链接自动切换功能，并新增后台开关;
-2、系统安全问题修复；
-3、新增后台设置网站页面标题样式功能;
-4、修复列表序号翻页不连续问题;
-5、修复地址生成函数特殊情况后缀判断不准问题；
+2、新增后台设置网站页面标题样式功能;
+3、修复列表序号翻页不连续问题;
+4、修复地址生成函数特殊情况后缀判断不准问题；
+5、新增百度快速推送功能；
+6、系统安全问题修复；
 
 PbootCMS V2.0.8 build 2020-04-26
 1、修复兼容模式分享链接导致打不开页面问题；
