--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,9 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.4.6 build 2020-06-20
+1、修复系统安全问题；
+
 PbootCMS V1.4.5 build 2020-02-01
 1、修复一处安全漏洞；
 
