--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,9 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V2.1.0 build 2020-06-21
+1、修复配置文件碰到特殊字符时保存错误问题；
+
 PbootCMS V2.0.9 build 2020-06-18
 1、新增多语言分享链接自动切换功能，并新增后台开关;
 2、新增后台设置网站页面标题样式功能;
