--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,9 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V2.1.1 build 2020-07-06
+1、新增升级3.X通道；
+
 PbootCMS V2.1.0 build 2020-06-21
 1、修复配置文件碰到特殊字符时保存错误问题；
 
