--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,9 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V3.0.1 build 2020-07-09
+1、修复会员权限不足抱错页面被覆盖掉问题；
+
 PbootCMS V3.0.0 build 2020-07-06
 1、新增会员功能，支持注册、登录、资料、积分等操作;
 2、支持对会员相关功能进行后台配置;
