--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,7 +4,9 @@
 ##########################################
 
 PbootCMS V3.0.1 build 2020-07-09
-1、修复会员权限不足抱错页面被覆盖掉问题；
+1、修复会员权限不足报错页面被404覆盖掉问题；
+2、新增对循环体标签整体进行访问权限控制，如list,nav等；
+3、新增内容权限不足时调整登录界面“不等待跳登录”参数控制；
 
 PbootCMS V3.0.0 build 2020-07-06
 1、新增会员功能，支持注册、登录、资料、积分等操作;
