--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,12 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V3.0.2 build 2020-08-03
+1、修复会员评论无昵称时不解析标签问题；
+2、修复默认模板留言页面判断错误问题；
+3、修复两处存在安全隐患的漏洞；
+4、其他问题修复与优化；
+
 PbootCMS V3.0.1 build 2020-07-09
 1、修复会员权限不足报错页面被404覆盖掉问题；
 2、新增对循环体标签整体进行访问权限控制，如list,nav等；
