--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,11 +3,17 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
-PbootCMS V3.0.2 build 2020-08-03
+PbootCMS V3.0.2 build 2020-08-04
 1、修复会员评论无昵称时不解析标签问题；
 2、修复默认模板留言页面判断错误问题；
 3、修复两处存在安全隐患的漏洞；
-4、其他问题修复与优化；
+4、修复首页筛选兼容模式错误；
+5、修复tag标签地址错误问题；
+6、修复扩展类文件地址错误问题；
+7、修复文章关闭后tag依然调用问题；
+8、修复后台设置搜索词标题不解析问题；
+9、修复内置附件标签不支持截取问题；
+10、其他问题修复与优化；
 
 PbootCMS V3.0.1 build 2020-07-09
 1、修复会员权限不足报错页面被404覆盖掉问题；
