--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -10,6 +10,7 @@ PbootCMS V3.0.4 build 2021-02-14
 4、修复地址栏扩展后可附带任意字符问题;
 5、修复部分主机CDN后台跳转异常；
 6、升级layui为最新版本；
+7、修复系统存在的安全问题；
 
 PbootCMS V3.0.3 build 2020-10-07
 1、修复上版本出现的地址后缀不一致问题；
