--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -11,6 +11,7 @@ PbootCMS V3.0.4 build 2021-02-14
 5、修复部分主机CDN后台跳转异常；
 6、升级layui为最新版本；
 7、修复系统存在的安全问题；
+8、优化内容含有标签的处理；
 
 PbootCMS V3.0.3 build 2020-10-07
 1、修复上版本出现的地址后缀不一致问题；
